--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,11 @@
     <head>
         <script src="node_modules/phaser-ce/build/phaser.js"></script>
         <script src="build.js"></script>
+        <style>
+            body {
+                background-color: grey;
+            }
+        </style>
     </head>
     <body>
         <div id="game"></div>
