--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <script src="node_modules/phaser-ce/build/phaser.js"></script>
-        <script src="build.js"></script>
+        <script src="public/build.js"></script>
         <style>
             body {
                 background-color: grey;
